Added statistical analysis used for 575 paper

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
-.Rproj.user
-.Rhistory
-.apikeys
-.pptx
-.html
-.pdf
+*.Rproj.user
+*.Rhistory
+*.apikeys
+*.pptx
+*.html
+*.pdf
+*.lof
+*.log
+*.lot
+*.synctex.gz
+*.tex
+*.toc
